Fix mainfest url

--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
   "url": "https://github.com/cuonghx-ngen/ton-unity-sdk",
   "name": "TON Unity SDK",
-  "iconUrl": "https://github.com/cuonghx-ngen/ton-unity-sdk/ton-unity-sdk.sol"
+  "iconUrl": "https://raw.githubusercontent.com/cuonghx-ngen/ton-unity-sdk/main/ton-unity-sdk.png"
 }
